# bitcoin-simgrid

./: .gitignore  CMakeLists.txt  README.md  design-ideas.txt
platform/: blockchain_data.json  default_deployment.xml  default_platform.xml
platform/default/: platform.xml
platform/default_deployment/: ctg_data  deployment.xml  miner_data-0  miner_data-100  miner_data-104  miner_data-106  miner_data-108  miner_data-109  miner_data-11  miner_data-111  miner_data-112  miner_data-114  miner_data-116  miner_data-117  miner_data-118  miner_data-121  miner_data-124  miner_data-125  miner_data-126  miner_data-128  miner_data-130  miner_data-131  miner_data-132  miner_data-133  miner_data-137  miner_data-14  miner_data-140  miner_data-141  miner_data-142  miner_data-146  miner_data-148  (+413 more)
src/: aux-functions.cpp  aux-functions.hpp  aux_functions.cpp  aux_functions.hpp  base-node.hpp  base_node.cpp  base_node.hpp  bitcoin-simgrid.cpp  bitcoin-simgrid.hpp  bitcoin_simgrid.cpp  bitcoin_simgrid.hpp  ctg.cpp  ctg.hpp  ctg_base_implementor.hpp  ctg_model_implementor.cpp  ctg_model_implementor.hpp  ctg_trace_implementor.cpp  ctg_trace_implementor.hpp  known_block.hpp  magic_constants.hpp  message.hpp  miner.cpp  miner.hpp  monitor.cpp  monitor.hpp  node.cpp  node.hpp  signal_handler.cpp  signal_handler.hpp  trace_item.cpp  trace_item.hpp  trace_item_miner.cpp  trace_item_miner.hpp
utils/: baseconverter.py  createDeploymentXml  createPlatformXml  createPlatformXmlFromBitnodes  get_txs_confirmation_times  get_txs_stats  runAndReturnRssAndTime.sh  store_some_part_of_the_blockchain.py
(+627 files in other folders)
